# Open_classroom_Project_10

./: pyproject.toml  server.py
.github/workflows/: ci.yml
templates/: booking.html  welcome.html
tests/: conftest.py
tests/integration/: test_server_integration.py
tests/unit/: test_server_unit.py
