[project]
name = "open-classroom-project-10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click==7.1.2",
    "coverage>=7.14.0",
    "flask==1.1.2",
    "itsdangerous==1.1.0",
    "jinja2==2.11.2",
    "markupsafe==1.1.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "werkzeug==1.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["server"]

[tool.coverage.report]
show_missing = true
fail_under = 60
